--- a/index.html
+++ b/index.html
@@ -34,37 +34,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.8.7/min/tiny-slider.js"></script>
-    <script>
-        var slider = tns({
-            container: ".my-slider",
-            items: 4,
-            slideBy: 1,
-            speed: 800,
-            gutter: 20,
-            controls: false,
-            nav: false,
-        });
-        let a = document.querySelectorAll('img');
-        let title = document.getElementById('title');
-        let review = document.getElementById('review');
-        let counter = document.getElementById('counter');
-        for (let i = 0; i < a.length; i++) {
-            a[i].addEventListener('click', function(e) {
-                let id = parseInt(e.target.src.slice(-6, -5));
-                counter.innerHTML = "0" + id;
-                id = id > 3 ? id - 4 : id + 1;
-                slider.goTo(id);
-                title.innerHTML = a[i].getAttribute("data-title");
-                review.innerHTML = a[i].getAttribute("data-review");
-                for (let i = 0; i < a.length; i++) {
-                    a[i].classList.remove('selected');
-                    a[i].src === e.target.src && a[i].classList.add('selected');
-                }
-            });
-        }
-        document.querySelector('.arrow').addEventListener('click', function () {
-            slider.goTo('prev');
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
